objects/Childcare_From__c.object
<CustomObject>
    <description>Form used to enroll children into the childcare.</description>
    <fields>
        <fullName>Adress__c</fullName>
        <label>Adress</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Age__c</fullName>
        <label>Child Age</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_First_Name__c</fullName>
        <description>Description of child&apos;s first name</description>
        <label>Child First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Grade__c</fullName>
        <label>Child Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_School__c</fullName>
        <label>Child School</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1__c</fullName>
        <label>Emergency Contact 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2__c</fullName>
        <label>Emergency Contact 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guardian_Email__c</fullName>
        <label>Guardian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian_Name__c</fullName>
        <label>Guardian Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Phone_Number__c</fullName>
        <label>Guardian Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Childcare Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Parents-{00}</displayFormat>
        <label>Childcare From Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Childcare Forms</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Age_VR</fullName>
        <active>true</active>
        <errorConditionFormula>Child_Age__c  &lt; 5  ||  Child_Age__c  &gt; 14</errorConditionFormula>
        <errorDisplayField>Child_Age__c</errorDisplayField>
        <errorMessage>Sorry child age must be 5-14 for acceptance</errorMessage>
    </validationRules>
</CustomObject>